feat: Add first version of timer screen with time value and buttons

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Timeggz"
 include ':app'
+include ':core-extensions'
+include ':core-style'
